fix scrollbar

--- a/Calendario/src/App.scss
+++ b/Calendario/src/App.scss
@@ -6,7 +6,7 @@
 
 header {
   width: 98%;
-  height: 8vh;
+  height: 7vh;
   padding: 1%;
   display: flex;
   justify-content: space-between;
